--- a/.github/workflows/main_studentssperformance3.yml
+++ b/.github/workflows/main_studentssperformance3.yml
@@ -1,63 +1,36 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-# More info on Python, GitHub Actions, and Azure App Service: https://aka.ms/python-webapps-actions
+- name: Upload artifact for deployment jobs
+`
 
-name: Build and deploy Python app to Azure Web App - studentssperformance3
+Ensure that the `name` and `path` parameters are correctly set according to your workflow needs.
 
-on:
-  push:
-    branches:
-      - main
-  workflow_dispatch:
+4  uses: actions/upload-artifact@v2
+with:
+ name:. **Validate Syntax**:
+Ensure the workflow syntax is correct. You can use tools like [YAML Linter](https:// python-app
+ path: |
+   . 
+   !venv/
+``yamlvalidator.com/) to validate the `.github/workflows/main_studentssperformance3.yml` file.
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
+5. **`
+Here, the `!venv/` exclusion syntax might be causing issuesRetry Workflow**:
+Commit the changes to the workflow file and. GitHub Actions doesn't support the `! trigger the workflow again to confirm the fix.
 
-    steps:
-      - uses: actions/checkout@v2
+` syntax for excluding files or directories directly in the### Additional Steps
+If the issue persists, check:
+- Whether the required permissions for uploading artifacts are correctly `path` parameter.
 
-      - name: Set up Python version
-        uses: actions/setup-python@v1
-        with:
-          python-version: '3.7'
+### Recommended Fix
+Update the ` set in the workflow.
+- The runner environment compatibility with `actions/upload-artifact`.
 
-      - name: Create and start virtual environment
-        run: |
-          python -m venv venv
-          source venv/bin/activate
-      
-      - name: Install dependencies
-        run: pip install -r requirements.txt
-        
-      # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
-      
-      - name: Upload artifact for deployment jobs
-        uses: actions/upload-artifact@v2
-        with:
-          name: python-app
-          path: |
-            . 
-            !venv/
+path` parameter to explicitly point to files or directoriesWould you like me to retrieve the `.github/workflows/main you want to upload, excluding the virtual environment (`_studentssperformance3.yml` file to verify the existing configuration?venv`) directory. You can achieve this by using a shell command to prepare the files for upload before invoking `actions/upload-artifact`.
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+Replace the problematic step with the following:
+```yaml
+- name: Prepare files for upload
+run: |
+ mkdir -p artifacts
+ cp -r $(ls | grep -v venv) artifacts/
 
-    steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v2
-        with:
-          name: python-app
-          path: .
-          
-      - name: 'Deploy to Azure Web App'
-        uses: azure/webapps-deploy@v2
-        id: deploy-to-webapp
-        with:
-          app-name: 'studentssperformance3'
-          slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_DA91177C75E346B4BD3AD2EF1D318517 }}
+- name: Upload artifact for deployment jobs
